# Makefile.am for "/locale"

dlocaledir = $(datadir)/locale

nobase_dlocale_DATA = fr/LC_MESSAGES/crrcsim.mo \
                     de/LC_MESSAGES/crrcsim.mo \
                     it/LC_MESSAGES/crrcsim.mo \
                     cs/LC_MESSAGES/crrcsim.mo

EXTRA_DIST = $(nobase_dlocale_DATA) \
             xx/LC_MESSAGES/crrcsim.po \
             fr/LC_MESSAGES/crrcsim.po \
             de/LC_MESSAGES/crrcsim.po \
             it/LC_MESSAGES/crrcsim.po \
             cs/LC_MESSAGES/crrcsim.po

