# Makefile.am for "/models"

SUBDIRS = battery engine

modeldir = $(datadir)/@PACKAGE@/models

model_DATA   = allegro.xml apogee.xml biplane2.xml \
               fireworks3_d.xml FlexiflyXLM.xml gap65.xml Generic_F3F.xml heli.xml \
               k2.xml mav.xml melyan_01.xml outrage.xml PilatusB4.xml PilatusB4_26.xml \
               qc01.xml quickie01.xml sovereign.xml sport.xml \
               superzagi.xml supra_a.xml wasabi.xml zagi-xs.xml zipper.xml

EXTRA_DIST = $(model_DATA)
